[package]
name = "framed-stream"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }
monoio = { version = "0.0.9", default-features = false, features = ["bytes"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "fs", "macros", "rt"] }
monoio = { version = "0.0.9", features = ["bytes"] }

[features]
read_monoio_file = ["monoio"]